--- a/topical.html
+++ b/topical.html
@@ -185,23 +185,23 @@
             <div class="logo-kolonne">
                 <ui class="sosiale-medier-topical">
                     <li>
-                        <a class="sosiale-link" href="#">
-                            <i class="fab fa-facebook"></i> <!--facebok-ikon -->
+                        <a class="sosiale-link" href="https://www.facebook.com/oslomet/" alt="Facebook">
+                            <i class="fab fa-facebook"></i> <!--facebook-ikon -->
                         </a>
 
                     </li>
                     <li>
-                        <a class="sosiale-link" href="#">
+                        <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb" alt="Instagram">
                             <i class="fab fa-instagram"></i><!-- instagram-ikon -->
                         </a>
                     </li>
                     <li>
-                        <a class="sosiale-link" href="#">
-                            <i class="fab fa-twitter"></i> <!-- LinkedIn-ikon -->
+                        <a class="sosiale-link" href="https://twitter.com/oslomet" alt="Twitter">
+                            <i class="fab fa-twitter"></i> <!-- Twitter-ikon -->
                         </a>
                     </li>
                     <li>
-                        <a class="sosiale-link" href="#">
+                        <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/" alt="LinkedIn">
                             <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
                         </a>
                     </li>
