--- a/campus.html
+++ b/campus.html
@@ -76,9 +76,20 @@
                 lobortis nibh lacus.
             </p>
             <div class="studiesal-container">
-            <img class="image-container1" src="./images/Stillerom.jpeg" alt="Bildet av stillerompå av p35"/>
-            <img class="image-container2" src="./images/Studiesal.jpeg" alt="Bildet av labrator på p35"/>
                 <div class="stillerom-oversikt">
+                <section class="noe">
+                <aside class="image-wrapper">
+                    <img
+                      src="./images/Stillerom.jpeg" alt="image of the quote machine project"
+                      loading="lazy" class="image-1"/>
+                    <img
+                      src="./images/stille_lesesal_1.jpeg" alt="image of a calculator project"
+                      loading="lazy" class="image-2"/>
+                    <img
+                      src="./images/stille_lesesal_2.jpeg" alt="four people working on code"
+                      loading="lazy" class="image-3"/>
+                  </aside>
+                </section>
                 <h3 class="stillerom-overskrift">Stillerom:</h3>
                 <ul class="campus-fasiliteter">
                     <li>consectetur adipiscing elit, sed do
@@ -95,6 +106,19 @@
                 </ul>
                 </div>
                 <div class="studiesal-oversikt">
+                    <section class="noe">
+                        <aside class="image-wrapper1">
+                            <img
+                              src="./images/Stillerom.jpeg" alt="image of the quote machine project"
+                              loading="lazy" class="image-4"/>
+                            <img
+                              src="./images/stille_lesesal_1.jpeg" alt="image of a calculator project"
+                              loading="lazy" class="image-5"/>
+                            <img
+                              src="./images/stille_lesesal_2.jpeg" alt="four people working on code"
+                              loading="lazy" class="image-6"/>
+                          </aside>
+                        </section>
                     <h3 class="studiesal-overskrift">Studiesal:</h3>
                     <ul class="campus-fasiliteter">
                         <li>consectetur adipiscing elit, sed do
@@ -111,6 +135,7 @@
                     </ul>
                     </div>
             </div>
+            
          <!--FOOTER-->
         <!--FOOTER-->
         <footer class="footer">
