--- a/topical.html
+++ b/topical.html
@@ -99,6 +99,7 @@
         <!-- Resten av teksten på siden under flexboksene -->
         <div class="midtdel">
             <div class="topical-h2">
+                <h1 class="smartphoneusage">Smartphone Usage</h1>
                 <h2>
                     The current usage of smartphones in everyday life
                 </h2>
