--- a/topical.html
+++ b/topical.html
@@ -22,10 +22,10 @@
             <!-- Todelt nav. På venstre side er det link til de andre sidene. -->
             <div>
                 <ul class="navlist-topical">
-                    <li class="topical-buttons"><a href="./index.html">Home</a></li>
-                    <li class="topical-buttons"><a href="./campus.html">Our campus</a></li>
-                    <li class="topical-buttons"><a href="./topical.html">Topical page</a></li>
-                    <li class="topical-buttons"><a href="./accessibility.html">Accessibility</a></li>
+                    <li class="topical-buttons"><a href="index.html">Home</a></li>
+                    <li class="topical-buttons"><a href="campus.html">Our campus</a></li>
+                    <li class="topical-buttons"><a href="topical.html">Topical page</a></li>
+                    <li class="topical-buttons"><a href="accessibility.html">Accessibility</a></li>
                 </ul>
             </div>
 
@@ -36,7 +36,7 @@
     Bruker <video> for at banneret med lyd og muligheten til å ta videoen foran osv. ikke kommer med. -->
     <main class="topicalmain">
         <section class="videotopical">
-            <video src="./images/video (540p) (1).mp4" muted loop autoplay></video>
+            <video src="images/video (540p) (1).mp4" muted loop autoplay></video>
         </section>
 
         <h2 class="topicalsmartphones"> Smartphones</h2>
