--- a/accessibility.html
+++ b/accessibility.html
@@ -45,6 +45,8 @@
         <section>
             <div class="accessibility-container">
                 <div class="accessibility-image">
+                    <!--Foto: fra nettsiden pexel.com. Foto av unplash. link til siden:https://unsplash.com/photos/person-holding-black-plastic-case-HE1zW44Zm_Y-->
+
                 <img src="./images/sigmund-HE1zW44Zm_Y-unsplash.jpg" alt="bilde som viser PC som tilpasser for disability">
             </div>
 
@@ -60,7 +62,9 @@
             </div>
             
             </div>
+            <hr>
         </section>
+
 
 
         
