--- a/campus.html
+++ b/campus.html
@@ -18,14 +18,11 @@
 <!-- Header og navigasjonsbar start -->
 <div class="index-header">
     <picture class="nav-logo">
+        <!-- Logo kilde: https://foto.oslomet.no/fotoweb/archives/5005-OsloMet-logo/Folder%2052/Logomedsignatur_gul_OsloMet-01.png.info -->
         <img src="./images/svart_logo_oslomet.png" alt="Oslomet-logo i svart"/>
     </picture>
     <nav>
         <ul class="navigations">                                  
-                <li class="nav-buttons"><a href="./index.html">
-                    <!-- hjem-ikon -->
-                    <i class="fa fa-home"></i></a></li>
-                    
                 <!-- Dropdown-meny start-->
                 <li class="nav-buttons dropmenu">   
                     <a class="dropbutton">
@@ -33,6 +30,9 @@
                         <i class="fa fa-bars"></i>
                     </a>
                     <div class="dropmenu-content">
+                        <a href="./index.html">
+                            <!-- hjem-ikon -->
+                            <i class="fa fa-home"></i></a>
                         <a href="./topical.html">Topical page</a>
                         <a href="./campus.html">Our campus</a>
                         <a href="./accessibility.html">Accessibility</a>
