--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
     <!-- Header og navigasjonsbar start -->
     <div class="index-header">
         <picture class="nav-logo">
+            <!-- Logo kilde: https://foto.oslomet.no/fotoweb/archives/5005-OsloMet-logo/Folder%2052/Logomedsignatur_gul_OsloMet-01.png.info -->
             <img src="./images/svart_logo_oslomet.png" alt="Oslomet-logo i svart"/>
         </picture>
         <nav>
             <ul class="navigations">                                  
-                    <li class="nav-buttons"><a href="./index.html">
-                        <!-- hjem-ikon -->
-                        <i class="fa fa-home"></i></a></li>
-                        
                     <!-- Dropdown-meny start-->
                     <li class="nav-buttons dropmenu">   
                         <a class="dropbutton">
@@ -32,6 +29,9 @@
                             <i class="fa fa-bars"></i>
                         </a>
                         <div class="dropmenu-content">
+                            <a href="./index.html">
+                                <!-- hjem-ikon -->
+                                <i class="fa fa-home"></i></a>
                             <a href="./topical.html">Topical page</a>
                             <a href="./campus.html">Our campus</a>
                             <a href="./accessibility.html">Accessibility</a>
@@ -46,6 +46,7 @@
     <div class="index-content">
         <!-- hovedbilde på index-siden -->
         <picture class="index-image"> 
+            <!-- Foto: https://foto.oslomet.no/fotoweb/archives/5007-Arkitektur-ved-OsloMet/Folder%2052/P35.jpg.info -->
             <img src="./images/P35-2400-1200.jpeg" alt="Fasadebilde fra P35 i Oslo. Bilde tatt av Benjamin A. Ward/OsloMet"/>
         </picture>
         <!-- hovedinnholdet på index-siden -->
@@ -54,7 +55,9 @@
             <div class="introductions-content">
                 
                 <h2>Generelt</h2>
-                <p>OsloMet – storbyuniversitetet er et moderne universitet med en lang historie som strekker seg mer enn 200 år tilbake i tid. Gjennom årene har utdanningene ved OsloMet og OsloMets forløpere bidratt til å forme det moderne velferdssamfunnet vi har i Norge.        
+                <p>OsloMet – storbyuniversitetet er et moderne universitet med en lang historie som 
+                    strekker seg mer enn 200 år tilbake i tid. Gjennom årene har utdanningene ved OsloMet og 
+                    OsloMets forløpere bidratt til å forme det moderne velferdssamfunnet vi har i Norge.        
                 </p>
                 <p>Kilde: Jan Messel. (u.d) Fra: <a href="https://www.oslomet.no/om/historie">Oslomet</a></p>
             </div>
@@ -67,28 +70,35 @@
         <div class="news-tabs">
             <div class="articles">
                 <div class="articles-picture">
-                <img src="./images/sigmund-HE1zW44Zm_Y-unsplash.jpg" alt="bilde som viser PC som tilpasser for disability" class="cover-articles">
+                <img src="./images/sigmund-HE1zW44Zm_Y-unsplash.jpg" alt="bilde som viser PC som tilpasser for disability" 
+                class="cover-articles">
                 </div>
                 <div class="articles-content">
-                    <a href=""><h3>Hva er accessibility?</h3></a>
-                    <p>Tilgjengelighet handler om å sørge for at alle, uavhengig av evner eller funksjonshemminger, kan få tilgang til og samhandle med et produkt, en tjeneste eller et miljø. </p>
+                    <!-- Foto: fra nettiden pexels.com. Foto av pixabay. 
+                        Link til siden: https://www.pexels.com/nb-no/bilde/antikk-forbindelse-foreldet-klassisk-207456/-->
+                    <a href="./accessibility.html"><h3>Hva er accessibility?</h3></a>
+                    <p>Tilgjengelighet handler om å sørge for at alle, uavhengig av evner eller funksjonshemminger, 
+                        kan få tilgang til og samhandle med et produkt, en tjeneste eller et miljø. </p>
                 </div>
             </div>
             <div class="articles">
                 <div class="articles-picture">
-                <img src="./images/oslomet_p35.jpg" alt="Skilting ved P32. Bilde tatt av Benjamin A. Ward/OsloMet" class="cover-articles">
+                    <!-- Foto:https://foto.oslomet.no/fotoweb/archives/5007-Arkitektur-ved-OsloMet/Folder%2052/CampusSommer-84.jpg.info -->
+                <img src="./images/oslomet_p35.jpg" alt="Skilting ved P32. Bilde tatt av Benjamin A. Ward/OsloMet" 
+                class="cover-articles">
                 </div>
                 <div class="articles-content" >
-                <a href=""><h3>Oslomet Campus</a></h3>
+                <a href="./campus.html"><h3>Oslomet Campus</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
             </div>
             <div class="articles">
                 <div class="articles-picture">
-                <img src="./images/pexels-pixabay-356056.jpg" alt="skrivebord med pc, smartbrett, mobil og diverse" class="cover-articles">
+                <img src="./images/pexels-pixabay-356056.jpg" alt="skrivebord med pc, smartbrett, mobil og diverse" 
+                class="cover-articles">
                 </div>
                 <div class="articles-content" >
-                    <a href="#"><h3>Universal design - Smartphones</h3></a>
+                    <a href="./topical.html"><h3>Universal design - Smartphones</h3></a>
                     <p>Norwegian government chooses to implement the European Accessibility Act into Norwegian law.</p>
                     </div>
             </div>
