--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 class="cover-articles">
                 </div>
                 <div class="articles-content" >
-                <a href="./campus.html"><h3>Oslomet Campus</a></h3>
+                <a href="./campus.html"><h3>Oslomet Campus</h3></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
             </div>
