--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
                 class="cover-articles">
                 </div>
                 <div class="articles-content">
-                    <!-- Foto: fra nettiden pexels.com. Foto av pixabay. 
-                        Link til siden: https://www.pexels.com/nb-no/bilde/antikk-forbindelse-foreldet-klassisk-207456/-->
+                 <!--Foto: fra nettsiden pexel.com. Foto av unplash. link til siden:https://unsplash.com/photos/person-holding-black-plastic-case-HE1zW44Zm_Y-->
                     <a href="./accessibility.html"><h3>Hva er accessibility?</h3></a>
                     <p>Tilgjengelighet handler om å sørge for at alle, uavhengig av evner eller funksjonshemminger, 
                         kan få tilgang til og samhandle med et produkt, en tjeneste eller et miljø. </p>
@@ -88,7 +87,7 @@
                 class="cover-articles">
                 </div>
                 <div class="articles-content" >
-                <a href="./campus.html"><h3>Oslomet Campus</h3></a>
+                <a href="./campus.html"><h3>Oslomet Campus</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
             </div>
@@ -153,7 +152,7 @@
             </div>
 
             <div class="adresse-kolonne">
-                <p class="adresse-tittel">Kontakt oss</p>
+                <h3 class="adresse-tittel">Kontakt oss</h3>
                 <address class="kontakt">
                     <p class="address">
                         Pilestredet 35. Studenttorget
