--- a/index.html
+++ b/index.html
@@ -50,24 +50,21 @@
             <img src="./images/P35-2400-1200.jpeg" alt="Fasadebilde fra P35 i Oslo. Bilde tatt av Benjamin A. Ward/OsloMet"/>
         </picture>
         <!-- hovedinnholdet på index-siden -->
-        <div class="introductions">
+        <div class="index-intro">
             <h1>Velkommen til Oslomet</h1>
-            <div class="introductions-content">
-                
-                <h2>Generelt</h2>
-                <p>OsloMet – storbyuniversitetet er et moderne universitet med en lang historie som 
+            <h2>Generelt</h2>
+            <p>OsloMet – storbyuniversitetet er et moderne universitet med en lang historie som 
                     strekker seg mer enn 200 år tilbake i tid. Gjennom årene har utdanningene ved OsloMet og 
                     OsloMets forløpere bidratt til å forme det moderne velferdssamfunnet vi har i Norge.        
-                </p>
-                <p>Kilde: Jan Messel. (u.d) Fra: <a href="https://www.oslomet.no/om/historie">Oslomet</a></p>
-            </div>
+            </p>
+            <p>Kilde: Jan Messel. (u.d) Fra: <a href="https://www.oslomet.no/om/historie">Oslomet</a></p>
         </div>
         <!-- Overskrift for framhevet artikler -->
         <div class="new-tabs headings">
             <h2>Artikler</h2>
         </div>
         <!-- Framhevet artikler i index-siden -->
-        <div class="news-tabs">
+        <div class="index-highlights">
             <div class="articles">
                 <div class="articles-picture">
                 <img src="./images/sigmund-HE1zW44Zm_Y-unsplash.jpg" alt="bilde som viser PC som tilpasser for disability" 
