--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
         <!-- hovedinnholdet på index-siden -->
         <div class="index-intro">
             <h1>Velkommen til Oslomet</h1>
-            <h2>Generelt</h2>
-            <p>OsloMet – storbyuniversitetet er et moderne universitet med en lang historie som 
+            <div class="index-innlegg">
+                <h2>Generelt</h2>
+                <p>OsloMet – storbyuniversitetet er et moderne universitet med en lang historie som 
                     strekker seg mer enn 200 år tilbake i tid. Gjennom årene har utdanningene ved OsloMet og 
                     OsloMets forløpere bidratt til å forme det moderne velferdssamfunnet vi har i Norge.        
-            </p>
-            <p>Kilde: Jan Messel. (u.d) Fra: <a href="https://www.oslomet.no/om/historie">Oslomet</a></p>
+                </p>
+                <p>Kilde: Jan Messel. (u.d) Fra: <a href="https://www.oslomet.no/om/historie">Oslomet</a></p>
+            </div>
         </div>
         <!-- Overskrift for framhevet artikler -->
         <div class="new-tabs headings">
