--- a/accessibility.html
+++ b/accessibility.html
@@ -27,11 +27,9 @@
                             <i class="fa fa-bars"></i>
                         </a>
                         <div class="dropmenu-content">
-                            <a href="./index.html">
-                                <!-- hjem-ikon -->
-                                <i class="fa fa-home"></i></a>
-                            <a href="./topical.html">Topical page</a>
+                            <a href="./index.html">Home</a>
                             <a href="./campus.html">Our campus</a>
+                            <a href="./topical.html">Topical page</a>
                             <a href="./accessibility.html">Accessibility</a>
                           </div>
                     </li>
@@ -63,6 +61,20 @@
             
             </div>
             <hr>
+        </section>
+
+        <section>
+            <div>
+                <p class="beskriver-accissibility">For index-siden har gruppe vår først designet en layout for utseendet, så lagd CSS for å oppfylle designet. Elementene i CSS for index-siden starter med CSS, 
+                    og der er kommentarer i koden av de ulike delene. Index-siden har 3 deler, header, innhold og footer. For navigasjonsbaren har vi valgt en simpelt design med logo 
+                    på den ene siden og nedtrekksmeny på den andre. Innholdet er inspirert av blogginnlegg i en kolonne, og tar i bruk flex-bokser. Nederst har vi artikler som er framhevet for lettere tilgang. 
+                </p>
+            </div>
+            <hr>
+        </section>
+
+        <section>
+          <h2 class="definasion">Hvordan vi teste koden</h2>
         </section>
 
 
