--- a/campus.html
+++ b/campus.html
@@ -30,8 +30,7 @@
                         <i class="fa fa-bars"></i>
                     </a>
                     <div class="dropmenu-content">
-                        <a href="./index.html">
-                            <!-- hjem-ikon -->
+                        <a href="./index.html">Home</a>
                             <i class="fa fa-home"></i></a>
                         <a href="./topical.html">Topical page</a>
                         <a href="./campus.html">Our campus</a>
