--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
                             <i class="fa fa-bars"></i>
                         </a>
                         <div class="dropmenu-content">
-                            <a href="./index.html">
-                                <!-- hjem-ikon -->
-                                <i class="fa fa-home"></i></a>
-                            <a href="./topical.html">Topical page</a>
+                            <a href="./index.html">Home</a>
                             <a href="./campus.html">Our campus</a>
+                            <a href="./topical.html">Topical page</a>
                             <a href="./accessibility.html">Accessibility</a>
                           </div>
                     </li>
