--- a/topical.html
+++ b/topical.html
@@ -39,7 +39,7 @@
             <video src="images/video (540p) (1).mp4" muted loop autoplay></video>
         </section>
 
-        <h2 class="topicalsmartphones"> Smartphones</h2>
+        <h2 class="overskriftsmartphones"> Smartphones</h2>
 
         <!-- Flexbox for å ha bilde og intro tekst side om side -->
         <section>
