--- a/campus.html
+++ b/campus.html
@@ -15,8 +15,8 @@
 </head>
 <body>
 
-<!-- Header og navigasjonsbar start -->
-<div class="index-header">
+   <!-- Header og navigasjonsbar start -->
+   <div class="index-header">
     <picture class="nav-logo">
         <!-- Logo kilde: https://foto.oslomet.no/fotoweb/archives/5005-OsloMet-logo/Folder%2052/Logomedsignatur_gul_OsloMet-01.png.info -->
         <img src="./images/svart_logo_oslomet.png" alt="Oslomet-logo i svart"/>
@@ -31,9 +31,8 @@
                     </a>
                     <div class="dropmenu-content">
                         <a href="./index.html">Home</a>
-                            <i class="fa fa-home"></i></a>
-                        <a href="./topical.html">Topical page</a>
                         <a href="./campus.html">Our campus</a>
+                        <a href="./topical.html">Topical page</a>
                         <a href="./accessibility.html">Accessibility</a>
                       </div>
                 </li>
@@ -42,9 +41,9 @@
     </nav>
 </div>
 <!-- Header og navigasjonsbar slutt -->
+<!-- Header og navigasjonsbar slutt -->
 <!-- campus innhold start-->
 <div class="campus-container">
-    <img src="./images/oslomet_p35.jpg" alt="Bildet av utsiden av p35"/>
     <div class="item">
         <h1 class="campus-overskrift">Campus</h1>
         <p class="campus-intro">Lorem ipsum dolor sit amet, 
@@ -63,9 +62,11 @@
         cras.Tempus urna et pharetra pharetra massa massa ultricies. 
         </p>
     </div>
+    <img class="campus-img" src="./images/oslomet_p35.jpg" alt="Bildet av utsiden av p35"/>
+
 </div>
 <hr>
-<h2 class="oversiktstittel">Studentfasiliteter på p35:</h2>
+<h2 class="oversiktstittel">Studentfasiliteter på p35</h2>
 <p class="oversiktsparagraf"> Troin quis libero nec urna rutrum molestie. Sed a purus ac est volutpat tincidunt. 
         Quisque gravida vitae nunc ac volutpat. Vivamus et nisl sed nunc viverra euismod. Phasellus ultrices, quam ut 
         porttitor semper, ipsum ipsum pellentesque est, id dictum urna felis et enim. Nunc posuere est lobortis cursus mattis. 
@@ -74,28 +75,13 @@
         fames ac turpis egestas. Integer bibendum accumsan condimentum. Morbi facilisis, lorem dapibus gravida dictum, tortor 
         nibh sollicitudin ante, vitae ultricies neque est sit amet dolor. Sed consequat tellus eu maximus viverra. Sed 
         lobortis nibh lacus. Troin quis libero nec urna rutrum molestie. Sed a purus ac est volutpat tincidunt. 
-        Quisque gravida vitae nunc ac volutpat. Vivamus et nisl sed nunc viverra euismod. Phasellus ultrices, quam ut 
-        porttitor semper, ipsum ipsum pellentesque est, id dictum urna felis et enim. Nunc posuere est lobortis cursus mattis. 
-        Vivamus ligula nibh, imperdiet sed tristique in, sagittis id mauris. Fusce consectetur quis nulla a dignissim. Etiam eu
-        mauris imperdiet, dictum lacus et, ornare erat. Pellentesque habitant morbi tristique senectus et netus et malesuada 
-        fames ac turpis egestas. Integer bibendum accumsan condimentum. Morbi facilisis, lorem dapibus gravida dictum, tortor 
-        nibh sollicitudin ante, vitae ultricies neque est sit amet dolor. Sed consequat tellus eu maximus viverra. Sed 
-        lobortis nibh lacus.
+        Quisque gravida vitae nunc ac volutpat. Vivamus et nisl sed nunc viverra euismod. 
 </p>
 <!-- -->
 <div class="prøve">
-    <div class="image-wrapper">
-        <img src="./images/stille_lesesal.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="image-1"/>
-        <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fstudent.oslomet.no%2Fauditorier-undervisningsrom%2F-%2Fundervisningsrom
-            %2Fcampus%2FPIL%2Fbygning%2FP35%2From%2FP35P35-PI339&psig=AOvVaw3oVY3dnygWXssISM0Bmh22&ust=1699698337710000&source=images&cd
-            =vfe&opi=89978449&ved=0CBEQjRxqFwoTCMCCju-buYIDFQAAAAAdAAAAABAE-->
-        <img src="./images/stille_lesesal_1.jpeg" alt="stille leserom på p35 i PI330" loading="lazy" class="image-2"/>
-        <!--https://student.oslomet.no/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI330-->
-        <img src="./images/stille_lesesal_2.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="image-3"/>
-        <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI339-->
-    </div>
-    <div>
-        <h3 class="stillerom-overskrift">Stillerom:</h3>
+
+    <div >
+        <h3 class="stillerom-overskrift">Stillerom</h3>
         <ul class="campus-fasiliteter">
             <li>consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -115,6 +101,34 @@
             </li>
         </ul>
     </div>
+        <div class="image-wrapper">
+        <img src="./images/stille_lesesal.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="image-1"/>
+        <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fstudent.oslomet.no%2Fauditorier-undervisningsrom%2F-%2Fundervisningsrom
+            %2Fcampus%2FPIL%2Fbygning%2FP35%2From%2FP35P35-PI339&psig=AOvVaw3oVY3dnygWXssISM0Bmh22&ust=1699698337710000&source=images&cd
+            =vfe&opi=89978449&ved=0CBEQjRxqFwoTCMCCju-buYIDFQAAAAAdAAAAABAE-->
+        <img src="./images/stille_lesesal_1.jpeg" alt="stille leserom på p35 i PI330" loading="lazy" class="image-2"/>
+        <!--https://student.oslomet.no/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI330-->
+        <img src="./images/stille_lesesal_2.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="image-3"/>
+        <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI339-->
+    </div>
+ 
+    <div>
+        <h3 class="studiesal-overskrift">Studiesal</h3>
+        <ul class="campus-fasiliteter">
+            <li>consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+            <li>Tortor consequat id porta nibh venenatis
+                cras.Tempus urna et pharetra pharetra massa massa ultricies.</li>
+            <li> Vestibulum morbi blandit cursus risus at
+                ultrices mi tempus.Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+            <li>Tortor consequat id porta nibh venenatis
+                cras.</li>
+            <li>Vestibulum morbi blandit cursus risus at.</li>
+        </ul>   
+    </div>
+
     <div class="image-wrapper">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
         <img src="./images/studiesal_3.jpeg" alt="studiesal på p35 i PH451" loading="lazy" class="image-4"/>
@@ -122,9 +136,10 @@
         <img src="./images/studiesal_1.jpeg" alt="et annet fra studiesal på p35 i PH451"loading="lazy" class="image-5"/>
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
         <img src="./images/studiesal_2.jpeg" alt="enda et bilde fra studiesal på p35 i PH451" loading="lazy" class="image-6"/>
-    </div>  
+    </div> 
+
     <div>
-        <h3 class="studiesal-overskrift">Studiesal:</h3>
+        <h3 class="seminar-overskrift">Seminarrom</h3>
         <ul class="campus-fasiliteter">
             <li>consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
@@ -147,8 +162,9 @@
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI752-->
         <img src="./images/seminarrom_2.jpeg" alt="seminarrom på p35 i PI752" oading="lazy" class="image-9"/>
     </div>
-    <div>
-        <h3 class="seminar-overskrift">Seminarrom:</h3>
+    
+    <div class>
+        <h3 class="grupperom-overskrift">Grupperom</h3>
         <ul class="campus-fasiliteter">
             <li>consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
@@ -170,22 +186,6 @@
         <img src="./images/grupperom_1.jpeg" alt="grupperom på p35 i PI238"loading="lazy" class="image-11"/>
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI234-->
         <img src="./images/grupperom_2.jpeg" alt="grupperom på p35 PI234" oading="lazy" class="image-12"/>
-    </div>
-    <div class>
-        <h3 class="grupperom-overskrift">Grupperom:</h3>
-        <ul class="campus-fasiliteter">
-            <li>consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-            <li>Tortor consequat id porta nibh venenatis
-                cras.Tempus urna et pharetra pharetra massa massa ultricies.</li>
-            <li> Vestibulum morbi blandit cursus risus at
-                ultrices mi tempus.Lorem ipsum dolor sit amet, 
-                consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-            <li>Tortor consequat id porta nibh venenatis
-                cras.</li>
-            <li>Vestibulum morbi blandit cursus risus at.</li>
-        </ul>   
     </div>
 </div>
 <p class="link-campus"> Vil du se på flere av våre fasiliteter på p35? <a href="https://student.oslomet.no/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35" target="_blank" rel="noreferrer"
