--- a/accessibility.html
+++ b/accessibility.html
@@ -16,7 +16,7 @@
     <div class="index-header">
         <picture class="nav-logo">
             <!-- Logo kilde: https://foto.oslomet.no/fotoweb/archives/5005-OsloMet-logo/Folder%2052/Logomedsignatur_gul_OsloMet-01.png.info -->
-            <img src="./images/svart_logo_oslomet.png" alt="Oslomet-logo i svart"/>
+            <img src="images/svart_logo_oslomet.png" alt="Oslomet-logo i svart"/>
         </picture>
         <nav>
             <ul class="navigations">                                  
@@ -53,7 +53,7 @@
             </div>
     <!--Foto: fra nettsiden pexel.com. Foto av unplash. link til siden:https://unsplash.com/photos/person-holding-black-plastic-case-HE1zW44Zm_Y-->
 
-    <img src="./images/sigmund-HE1zW44Zm_Y-unsplash.jpg" alt="bilde som viser PC som tilpasser for disability">
+    <img src="images/sigmund-HE1zW44Zm_Y-unsplash.jpg" alt="bilde som viser PC som tilpasser for disability">
         
 
 
@@ -114,7 +114,7 @@
       
     </p>
 </div>
-    <img class="campus-img" src="./images/validering.png">
+    <img class="campus-img" src="./images/validering.png" alt="">
 
 </div>
 </div>
