--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
                     OsloMets forløpere bidratt til å forme det moderne velferdssamfunnet vi har i Norge.        
                 </p>
                 <p>Kilde: Jan Messel. (u.d) Fra: <a href="https://www.oslomet.no/om/historie">Oslomet</a></p>
+                <h2>Introduksjon</h2>
+                <p>Denne nettsiden er utformet med bakgrunn av eksamen i emnet DATA1200 Webutvikling og inkluderende. For mappeeksamen
+                har vi lagt totalt 4 sider: denne index-siden, to artikkelsider, en som omhandler Oslomet campus, og et angående 
+                accessibility og hvordan vi har prøvd å gjøre nettsiden mer tilgjengelig og brukervennlig. Tilslutt har vi en emneside 
+                som heter topical, som er en side med annerledes utforming og omhandler noe helt annet enn Oslomet.</p>
+                <h3>Kandidatnr:</h3>
+
             </div>
         </div>
         <!-- Overskrift for framhevet artikler -->
